GGB-1947 fix overlapping
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55182 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
@@ -275,7 +275,7 @@
    			color: $accent-color;
     		text-transform: uppercase;
     		text-align: center;
-			float: right;
+			float: left;
 			margin: 16px 0px 16px 0px;
 			padding: 8px;
 			cursor: pointer;
@@ -297,25 +297,25 @@
 		
 		.moveFloatingBtn {
 			position: relative;
-    		bottom: 112px;
-    		left: calc(100% - 104px);
+    		bottom: 68px;
+    		left: calc(100% - 84px);
     		/*border: 1px solid #039999;*/
     		border-radius: 50%;
-    		width: 40px;
-   			height: 40px;
+    		width: 48px;
+   			height: 48px;
     		background: #00a8a8;
     		box-shadow: 0px 2px 10px rgba(0,0,0,.3), 0px 0px 1px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.25), inset 0px -1px 0px rgba(0,0,0,.15);
     		/*box-shadow: 2px 2px 3px 0 rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12);*/
     		transition: background-color 150ms ease 0ms;
     		
     		img {
-    			padding: 8px;
+    			padding: 12px;
     			width: 24px !important;
     			height: 24px !important;	
     		}
     	
     		&:hover {
-    			background: #038484;
+    			background: #008D8D;
     		}
 		}
 	}
